# gamerobotfactory

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  redeploy.bat
.github/workflows/: rust-ci.yml
client/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.integration.config.ts
client/scripts/: perf-check.mjs  perf-metrics.mjs  perf-metrics.test.mjs  record-demo.mjs
client/src/: main.ts
client/src/net/: connection.ts  protocol.ts  resolve-ws-url.ts
client/src/render/: canvas.ts  gait.ts  projection.ts
client/src/state/: interpolation.ts  mirror.ts
client/src/ui/: sidebar.ts
client/tests/e2e/: global-setup.ts  global-teardown.ts  render.spec.ts
client/tests/helpers/: spawn-server.ts
client/tests/integration/: session.test.ts
client/tests/unit/: canvas.test.ts  connection.test.ts  gait.test.ts  interpolation.test.ts  mirror.test.ts  projection.test.ts  protocol.test.ts  resolve-ws-url.test.ts  sidebar.test.ts  smoke.test.ts
docs/: KANBAN.md  robot-arm-conveyor-game-design.md
docs/superpowers/plans/: 2026-07-15-persistence-observability-plan.md  (+8 more)
server/: Cargo.toml
server/src/: config.rs  delta.rs  gait.rs  game_state.rs  grid.rs  ik.rs  lib.rs  main.rs  metrics.rs  pathfind.rs  persistence.rs  posture.rs  production.rs  protocol.rs  session.rs  sim.rs  ws.rs
server/tests/: pathfinding_properties.rs  rest_integration.rs  static_serving_integration.rs  tick_properties.proptest-regressions  tick_properties.rs  ws_integration.rs
(+7 files in other folders)
