[package]
name = "gamerobotfactory-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "sim_core"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
rayon = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
prometheus = "0.13"

[dev-dependencies]
proptest = "1"
tokio-tungstenite = "0.23"
futures-util = "0.3"
